--- a/Assets/Scripts/RepositoryInterfaces/RepositoryInterfaces.asmdef
+++ b/Assets/Scripts/RepositoryInterfaces/RepositoryInterfaces.asmdef
@@ -1,9 +1,8 @@
 {
-    "name": "UseCases",
+    "name": "RepositoryInterfaces",
     "rootNamespace": "",
     "references": [
-        "GUID:399237257ad03124c9ced3945b4ae024",
-        "GUID:170e2f8d0024d0147b84960ab1fb15fb"
+        "GUID:399237257ad03124c9ced3945b4ae024"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
