--- a/Assets/Scripts/Tests/UseCasesTests/UseCasesTests.asmdef
+++ b/Assets/Scripts/Tests/UseCasesTests/UseCasesTests.asmdef
@@ -5,14 +5,16 @@
         "UnityEngine.TestRunner",
         "UnityEditor.TestRunner",
         "UseCases",
-        "Entities"
+        "Entities",
+        "RepositoryInterfaces"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": true,
     "precompiledReferences": [
-        "nunit.framework.dll"
+        "nunit.framework.dll",
+        "NSubstitute.dll"
     ],
     "autoReferenced": false,
     "defineConstraints": [
